<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/post"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp"
    tools:context=".PostActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="291dp"
        android:layout_height="255dp"
        android:contentDescription="@string/post_image"
        android:src="@drawable/ic_baseline_image_24"
        app:layout_constraintBottom_toTopOf="@+id/camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.488"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <Button
        android:id="@+id/camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="Capture Image"
        app:layout_constraintBottom_toTopOf="@+id/post_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/post_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:autofillHints="Post Title"
        android:ems="10"
        android:hint="@string/post_title"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/post_tags"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/post_tags"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints="tags"
        android:ems="10"
        android:hint="@string/tags"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/spinner_category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/post_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:autofillHints="@string/postcontentlabel"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/postcontentlabel"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/button_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="299dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:background="#060606"
        android:text="@string/publish"
        android:textColor="#F1EEEE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinner_category"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/get_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/get_location"
        android:layout_width="392dp"
        android:layout_height="38dp"
        android:layout_marginBottom="19dp"
        android:text="Get Location"
        app:layout_constraintBottom_toTopOf="@+id/location_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/location_text"
        android:layout_width="0dp"
        android:layout_height="17dp"
        android:layout_marginBottom="28dp"
        android:text="Location"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/post_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>